Fixed bug #80617: Type narrowing warning in ZEND_TYPE_INIT_CODE